kubernetes-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-one-service
  namespace: dev
spec:
  selector:
    app: microservice-one
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32000
  type: NodePort
